--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-bottom: 2rem;
+  margin-bottom: rem;
 }
 
 .category-cards {
@@ -68,7 +68,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 60vh;
+  height: 65vh;
 }
 
 /* Flashcard Styling */
@@ -99,7 +99,7 @@ body {
   display: flex;
   justify-content: space-between;
   gap: 20px;
-  margin-top: 20px;
+  margin-top: 10px;
   width: 100%;
   max-width: 350px;
 }
@@ -140,16 +140,16 @@ button.back-arrow:hover, button.next-arrow:hover {
   background-color: #1ABC9C; /* Lighter green for hover */
 }
 
-/* Back to Categories Button */
-.back-to-categories {
-  padding: 12px 30px;
+
+.textbutton {
+  padding: 8px 30px;
   background-color: #2c6e49; /* Green background */
   color: white;
-  border-radius: 20px; /* Rounded rectangular shape */
-  margin-top: 20px;
+  border-radius: 5px; /* Rounded rectangular shape */
+  margin-top: 10px;
 }
 
-.back-to-categories:hover {
+.textbutton:hover {
   background-color: #1ABC9C; /* Lighter green on hover */
 }
 
@@ -157,5 +157,51 @@ button.back-arrow:hover, button.next-arrow:hover {
 h1 {
   font-size: 2.5rem;
   color: #2c6e49;
-  margin-bottom: 2rem;
+}
+
+.feedback {
+  font-size: 1.2em;
+  margin-top: 20px;
+}
+
+.feedback.correct {
+  color: green;
+}
+
+.feedback.incorrect {
+  color: red;
+}
+
+.streak {
+  margin-top: 20px;
+  font-size: 1.2em;
+}
+
+button.mark-mastered {
+  background-color: #4CAF50;
+  color: white;
+}
+
+button.shuffle {
+  background-color: #f39c12;
+}
+
+button:disabled {
+  background-color: #bdc3c7;
+}
+
+input {
+  margin-right: 10px;
+  padding: 10px;
+  width: 350px;
+}
+
+/* New container for the action buttons */
+.action-buttons-container {
+  display: flex;
+  justify-content: center;
+  gap: 20px;  /* Space between the buttons */
+  margin-top: 20px;
+  width: 100%;
+  max-width: 350px; /* Limit the width for alignment */
 }
